// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toCanvas snapshots > alice@example.com default options 1`] = `
[
  {
    "op": "fillStyle",
    "value": "#f0f0f0",
  },
  {
    "args": [
      0,
      0,
      120,
      120,
    ],
    "op": "fillRect",
  },
  {
    "op": "fillStyle",
    "value": "hsl(50.8235294117647,58.11764705882353%,43.13725490196079%)",
  },
  {
    "args": [
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      68.57142857142857,
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      85.71428571428571,
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      17.142857142857142,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      34.285714285714285,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      68.57142857142857,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      85.71428571428571,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      17.142857142857142,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      34.285714285714285,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      51.42857142857143,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      68.57142857142857,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      85.71428571428571,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      17.142857142857142,
      68.57142857142857,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      34.285714285714285,
      68.57142857142857,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      51.42857142857143,
      68.57142857142857,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      68.57142857142857,
      68.57142857142857,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      85.71428571428571,
      68.57142857142857,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      17.142857142857142,
      85.71428571428571,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      85.71428571428571,
      85.71428571428571,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
]
`;

exports[`toCanvas snapshots > empty string default options 1`] = `
[
  {
    "op": "fillStyle",
    "value": "#f0f0f0",
  },
  {
    "args": [
      0,
      0,
      120,
      120,
    ],
    "op": "fillRect",
  },
  {
    "op": "fillStyle",
    "value": "hsl(50.8235294117647,44.588235294117645%,53.64705882352941%)",
  },
  {
    "args": [
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      85.71428571428571,
      17.142857142857142,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      17.142857142857142,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      34.285714285714285,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      51.42857142857143,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      68.57142857142857,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      85.71428571428571,
      34.285714285714285,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      17.142857142857142,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      34.285714285714285,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      68.57142857142857,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      85.71428571428571,
      51.42857142857143,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      34.285714285714285,
      68.57142857142857,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      68.57142857142857,
      68.57142857142857,
      17.142857142857142,
      17.142857142857142,
    ],
    "op": "fillRect",
  },
]
`;

exports[`toCanvas snapshots > hello pixelSize: 70 padding: 0 1`] = `
[
  {
    "op": "fillStyle",
    "value": "#f0f0f0",
  },
  {
    "args": [
      0,
      0,
      70,
      70,
    ],
    "op": "fillRect",
  },
  {
    "op": "fillStyle",
    "value": "hsl(223.05882352941177,43.1764705882353%,41.72549019607843%)",
  },
  {
    "args": [
      14,
      0,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      28,
      0,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      42,
      0,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      28,
      14,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      0,
      28,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      56,
      28,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      14,
      42,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      42,
      42,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      0,
      56,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      14,
      56,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      28,
      56,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      42,
      56,
      14,
      14,
    ],
    "op": "fillRect",
  },
  {
    "args": [
      56,
      56,
      14,
      14,
    ],
    "op": "fillRect",
  },
]
`;
